Fixed styling bugs in header row of index.html and contact.html to better vertically align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@ button {
     z-index:99;
 }
 
+ul {
+    margin: 0;
+}
+
 @media screen and (min-width: 767px) {
     body {
         font-size: 20px;
@@ -67,13 +71,18 @@ header {
 
 .rules-col {
     text-align: left;
-    padding-left: 30px;
+    padding-left: 20px;
+    padding-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .how-to-play {
     background-color: #b1efc7;
     color: #6b5757;
     border-color: #6b5757;
+    font-size: 12px;
 }
 
 .how-to-play-modal {
@@ -101,6 +110,9 @@ header {
 .nav-col {
     text-align: right;
     padding-right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn-secondary {
@@ -127,11 +139,9 @@ header {
 @media screen and (min-width: 767px) {
     .title-col {
         font-size: 55px;
-        padding: 20px 0 0;
     }
-    .nav-col,
-    .rules-col {
-        padding-top: 50px;    
+    .how-to-play {
+        font-size: 15px;
     }
     .nav-col {
         padding-right: 50px;
